Minor tidy up